Get to an okay place with pr1

--- a/src/content/ideas/2025/gios-pr1/index.mdx
+++ b/src/content/ideas/2025/gios-pr1/index.mdx
@@ -15,10 +15,20 @@ image:
 ---
 
 import { Image } from "astro:assets";
+
+import BookCard from "../../../../components/BookCard.astro";
 import Figure from "../../../../components/Figure.astro";
+
+import osTepImg from "../../../books/os-tep.jpg";
+import csAppImg from "../../../books/cs-app.jpg";
+import cLangImg from "../../../books/c-lang.jpg";
+import beejGuidesImg from "../../../books/beej-network.jpg";
+import linuxInterfaceImg from "../../../books/linux-interface.png";
+
 import clientServer from "./client-server.png";
 import userKernelSocket from "./user-kernel-socket.png";
 import getfileProtocol from "./getfile-protocol.png";
+import bossWorker from "./boss-worker2.png";
 
 ## Introduction: The Challenge
 
@@ -27,6 +37,9 @@ Ever wondered what *really* happens when you click a download link? It seems lik
 The goal was to implement a server capable of handling multiple file requests simultaneously. This wasn't just about writing code; it was about a head-first dive into the core concepts that make the modern internet possible: network sockets, system calls, concurrency, and protocol design.
 
 Going in, I was comfortable with C's syntax but had never touched the Berkeley socket API. Networking was a black box I'd only ever interacted with through the convenient abstractions like Python's `requests` library. This project was my opportunity to pry open that box. This post documents that journey, not just what I built, but the fundamental *whys* behind the code.
+
+> [!note]
+> This post is a detailed walkthrough of the first project in my graduate OS course. For a broader overview of all concepts covered in the course, please see the companion post: [GIOS: A Retrospective](/ideas/2025/gios-retro/).
 
 ## The Foundation: Client-Server & Network Models
 
@@ -175,89 +188,56 @@ For example: `GETFILE FILE_NOT_FOUND\r\n\r\n`.
 ### A Note on C Strings
 A crucial and challenging part of implementing this in C is that the received data is **not null-terminated**. A buffer from `recv()` is just a sequence of bytes. You cannot use standard string functions like `strcpy` or `strstr` on it directly without risking reading past the buffer's boundary. Parsing requires careful, manual inspection of the bytes, searching for the spaces and the final `\r\n\r\n` sequence. This was a fantastic, if sometimes frustrating, lesson in the difference between a C "string" and a raw byte array.
 
-## Scaling Up: The Move to Multithreading
+## Scaling Up with Concurrent Design: The Boss/Worker Pattern
 
-The initial, single-threaded server worked, but it had a huge flaw: it could only handle one client at a time. If one client requested a very large file, every other client had to wait in line. This does not scale.
+A single-threaded application, whether a client or a server, can only do one thing at a time. A server could only handle one download at once, and a client could only request one file at a time. This is a major bottleneck. To build a system that could handle significant load—many simultaneous file requests—both the client and server for this project needed to be **multithreaded**.
 
-The solution, mandated by the project, was to build a **multithreaded** server using the `pthreads` library, following the **Boss/Worker** design pattern.
+The design pattern used to achieve this was the **Boss/Worker model**, a powerful and common strategy for structuring concurrent applications.
 
-*   **The Boss Thread (Main Thread):** This thread's only job is to `accept()` new client connections. When a new connection is made, the Boss doesn't handle the client itself. Instead, it places the client's socket file descriptor into a shared work queue (the project provided a `steque` library for this).
-*   **Worker Threads:** A pool of worker threads is created when the server starts. They wait for work to appear in the queue. When a descriptor is added, one worker wakes up, takes the job, and handles the entire `GETFILE` transaction. Once it's done, it closes the client socket and goes back to waiting for more work.
+The pattern has two main components:
+*   **The Boss Thread:** Its sole responsibility is to accept incoming work and place it into a shared queue. It doesn't perform the work itself. This makes it highly responsive and prevents it from becoming a bottleneck.
+*   **Worker Threads:** A pool of one or more worker threads waits for work to appear in the queue. When a task is available, a worker takes it, processes it to completion, and then returns to the queue to wait for another task.
+
+This decouples the act of receiving a request from the work of processing it. You can scale the application's throughput by simply changing the number of worker threads.
+
+<Figure
+  src={bossWorker}
+  alt="The Boss and Worker Thread Pattern"
+  caption="The Boss/Worker Pattern: The Boss thread enqueues jobs, and a pool of Worker threads dequeues and processes them concurrently."
+/>
+
+An important performance characteristic of this pattern is that the overall system throughput is fundamentally limited by the boss thread's processing speed. Since the boss must handle every incoming request, the maximum request rate the system can sustain is approximately `1/boss_processing_time`. The worker threads determine how many requests can be processed concurrently, but they can't process requests faster than the boss can accept them.
+
+This pattern was applied to both sides of our file transfer application:
+
+*   **On the Server:** The Boss thread's only job was to `accept()` new client connections. It would immediately place the new client socket descriptor into the work queue. The Worker threads would then pull from this queue, each handling a full `GETFILE` transaction with a single client before going back for more work.
+*   **On the Client:** The pattern was mirrored. The Boss thread was responsible for parsing the list of files to download and enqueuing a request for each. The Worker threads would each take a request, connect to the server, download the file, and then look for the next download job.
 
 This model is powerful, but it introduces the classic challenges of concurrency.
 
 ### The Danger Zone: Concurrency, Mutexes, and Condition Variables
 
-The work queue is shared memory. If the Boss thread tries to add to the queue at the same time a Worker is trying to remove from it, you get a **race condition** that can corrupt the queue's state, leading to crashes or bizarre bugs.
+The work queue is shared state. If the Boss thread tries to add to the queue at the same time a Worker is trying to remove from it, you get a **race condition** that can corrupt the queue's state, leading to crashes or bizarre bugs.
 
 To solve this, you must protect the shared data. The project required using two key mechanisms from `pthreads`:
 
 1.  **Mutexes (`pthread_mutex_t`):** A mutex (short for **mut**ual **ex**clusion) acts as a lock. Before accessing the queue (the *critical section*), a thread must acquire the lock. If another thread already holds it, the thread will block until the lock is released. This ensures only one thread can modify the queue at a time.
 
-2.  **Condition Variables (`pthread_cond_t`):** But what should a worker do if it locks the queue and finds it's empty? It could unlock and then immediately try to lock again in a tight loop. This "busy-waiting" burns CPU cycles for no reason. A much more elegant solution is a condition variable. It allows threads to sleep efficiently until there's a reason to wake up.
-
-The correct pattern looks like this:
-
-*   **Worker Thread (Consumer):**
-    1.  Lock the mutex.
-    2.  While the queue is empty, call `pthread_cond_wait()`. This special function atomically unlocks the mutex and puts the thread to sleep.
-    3.  When woken up, it automatically re-acquires the lock. It then grabs a job from the queue.
-    4.  Unlock the mutex.
-    5.  Process the job (this happens outside the lock, allowing other threads to access the queue).
-
-*   **Boss Thread (Producer):**
-    1.  Lock the mutex.
-    2.  Add a new job to the queue.
-    3.  Call `pthread_cond_signal()` to wake up *one* of the sleeping worker threads.
-    4.  Unlock the mutex.
-
-Getting this interaction between mutexes and condition variables right was the hardest, and most rewarding, part of the project. It's the core pattern for nearly all producer-consumer problems in concurrent programming.
-
-```mermaid
-graph TD;
-    subgraph Server;
-        A[Boss Thread] -- "accepts connection" --> B(Client Socket);
-        B -- "enqueues socket" --> C{Work Queue};
-        C -- "protected by<br/>Mutex &<br/>Condition Variable" --> C;
-
-        subgraph "Worker Thread Pool";
-            W1(Worker 1);
-            W2(Worker 2);
-            W...;
-        end
-
-        C -- "dequeues socket" --> W1;
-        C -- "dequeues socket" --> W2;
-        C -- "dequeues socket" --> W...;
-
-        W1 --> P1[Handle GETFILE Request];
-        W2 --> P2[Handle GETFILE Request];
-        W... --> P...[Handle GETFILE Request];
-
-        P1 --> W1;
-        P2 --> W2;
-        P... --> W...;
-    end;
-
-    style A fill:#cde4f9,stroke:#5a8ac6,stroke-width:2px;
-    style W1 fill:#d5e8d4,stroke:#82b366,stroke-width:2px;
-    style W2 fill:#d5e8d4,stroke:#82b366,stroke-width:2px;
-    style W... fill:#d5e8d4,stroke:#82b366,stroke-width:2px;
-    style C fill:#fff2cc,stroke:#d6b656,stroke-width:2px;
-```
+2.  **Condition Variables (`pthread_cond_t`):** But what should a worker do if it locks the queue and finds it's empty? It could unlock and then immediately try to lock again in a tight loop. This "busy-waiting" burns CPU cycles for no reason. A much more elegant solution is a condition variable. It allows threads to sleep efficiently until there's a reason to wake up. When the boss thread adds a new job to the queue, it 'broadcasts' a signal to all worker threads to wake up and check the queue.
 
 ## Building and Testing
 
 A C project of this complexity demands proper tooling for building and testing.
 
-*   **Environment:** The project had specific Linux dependencies, so I used **Vagrant** to create a consistent, reproducible virtual machine, mirroring the official testing environment. This saved me from countless "works on my machine" headaches.
+*   **Environment:** The project had specific Linux dependencies, so I used **Docker** to create a consistent, reproducible virtual machine, mirroring the official testing environment. This saved me from countless "works on my machine" headaches.
 *   **Build System:** You can't just run `gcc` over and over. A `Makefile` is essential. It automates the process of compiling, linking, and cleaning up object files. It's also the perfect place to store compiler flags like `-Wall` (turn on all warnings), `-g` (include debugging symbols), and `-pthread` (link the pthreads library).
 *   **Automated and Stress Testing:** How do you know your server *really* works? You write tests—and not just simple ones. The best way to test a server is to write a client in a completely different language, which forces you to follow your protocol specification to the letter. I used Python and `pytest` (with its `socket` library, a thin wrapper around the same C APIs) to build a test suite that connected to my C server and exercised a range of scenarios: successful file downloads, requests for non-existent files, and malformed protocol requests, all while asserting that the server's responses were byte-for-byte compliant with the `GETFILE` specification.
+
 
     To push the server to its limits, I wrote a stress testing script that launched dozens of concurrent client connections, simulating real-world load and uncovering subtle race conditions or deadlocks. I also played with `valgrind` to check for memory leaks and invalid memory accesses, which is essential in C projects—especially when handling many threads and dynamic buffers. These tools together gave me confidence that my server was not only correct, but also robust and leak-free under heavy use.
 
 
-Here's a small generic `pytest` example of using the `socket` library to test a server (not specific to the `GETFILE` protocol):
+Here's a small generic `pytest` example of using the `socket` library to test a server (not specific to the `GETFILE` protocol to avoid academic integrity issues):
 ```python
 import socket
 
@@ -290,30 +270,85 @@ def test_get_file_not_found():
         assert response.strip() == b"ERROR 1"
 ```
 
-## Conclusion: From Class Project to Real-World Insight
+## Conclusion: From Theory to Practice
 
-This project was one of the most rewarding I've ever worked on. It demystified the network, revealing the layered, cooperative system that underpins so much of modern technology.
+This project served as a practical application of fundamental operating systems concepts, bridging the gap between theoretical knowledge and real-world implementation. It provided a low-level look into the layered, cooperative systems that underpin modern network technology.
 
-My key takeaways were:
-*   **The OS is your best friend:** It provides powerful, time-tested abstractions like sockets and threads that let you stand on the shoulders of giants.
-*   **Concurrency is tricky:** The power of multithreading comes with the price of complexity. Careful design and synchronization using tools like mutexes are not optional; they are requirements for correctness.
-*   **Protocols are everything:** The foundation of any network service is a clear, unambiguous protocol.
-*   **Test from the outside:** A robust test suite, especially one that mimics a real client, is the only way to be confident in your system's reliability.
+The key technical takeaways include:
 
-The patterns used here—thread pools, work queues, custom protocols—are the building blocks for the massive, distributed systems we use every day. While a web server like Nginx uses far more advanced techniques (like event-driven I/O with `epoll`), the fundamental goal is the same: handle as many concurrent clients as possible, as efficiently as possible. This project provided a tangible, low-level look at how that goal is achieved. It was a fantastic journey from the magic of a click to the logic of a `send()`.
+*   **The Power of OS Abstractions:** Sockets and threads are powerful, time-tested abstractions that enable the development of complex network applications without managing low-level hardware details.
+*   **The Challenges of Concurrency:** While multithreading improves throughput, it introduces significant complexity. Correct synchronization using mechanisms like mutexes and condition variables is not optional; it is a requirement for correctness and stability.
+*   **The Central Role of Protocols:** The foundation of any network service is a clear, unambiguous, and strictly-defined protocol.
+*   **The Necessity of External Testing:** A robust test suite that acts as a true client is the most effective way to validate protocol compliance, handle edge cases, and ensure system reliability under load.
+
+The patterns used here—thread pools, work queues, custom protocols—are the building blocks for the massive, distributed systems we use every day. While a production web server like Nginx uses far more advanced techniques (like event-driven I/O with `epoll` or `kqueue`), the fundamental goal is the same: handle as many concurrent clients as possible, as efficiently as possible. This project provided a tangible look at how that goal is achieved, connecting the high-level concept of a network request to the low-level logic of a `send()` system call.
+
+## Additional resources
+
+The man pages for the `socket` and `pthread` libraries were invaluable for this project. 
+
+```sh
+man socket
+man pthread
+man pthread_mutex_t
+man pthread_cond_t
+...etc
+```
+
+Or online:
+- https://man7.org/linux/man-pages/man2/socket.2.html
+- https://man7.org/linux/man-pages/man3/pthread.3.html
+- https://man7.org/linux/man-pages/man3/pthread_mutex_t.3.html
+- https://man7.org/linux/man-pages/man3/pthread_cond_t.3.html
+
+These books were also extremely helpful:
+
+<BookCard
+  title="The C Programming Language"
+  author="Brian W. Kernighan and Dennis M. Ritchie"
+  img={cLangImg}
+  url="https://www.google.com/books/edition/The_C_Programming_Language/OpJ_0zpF7jIC"
+>
+    <p>
+        The definitive book on C, written by its creators. I ready this cover to cover before the course started to brush up on my C knowledge.
+    </p>
+</BookCard>
+
+<BookCard
+  title="Beej's Guides to C, Network Programming, and IPC"
+  author="Brian 'Beej' Hall"
+  img={beejGuidesImg}
+  url="https://beej.us/guide/"
+>
+    <p>
+        An invaluable, practical, and free resource for C programming, socket programming, and inter-process communication. The network programming guide was especially helpful for this project.
+    </p>
+</BookCard>
+
+<BookCard
+  title="The Linux Programming Interface"
+  author="Michael Kerrisk"
+  img={linuxInterfaceImg}
+  url="https://man7.org/tlpi/"
+>
+    <p>
+        This is structured as an encyclopedic guide to the Linux and UNIX system programming interface. The chapters on sockets and threads were particularly helpful for this project.
+    </p>
+</BookCard>
+
+<BookCard
+  title="Operating Systems: Three Easy Pieces"
+  author="Remzi H. Arpaci-Dusseau and Andrea C. Arpaci-Dusseau"
+  img={osTepImg}
+  url="https://pages.cs.wisc.edu/~remzi/OSTEP/"
+>
+  <p>
+    This is the main book I used to supplement the lectures. It's filled with easy-to-understand explanations of complex topics and covers most of the material in the course. I highly recommend it.
+  </p>
+</BookCard>
+
 
 > [!info] A Note on Code Availability
 > In accordance with Georgia Tech's academic integrity policy and the license for course materials, the source code for this project is kept in a private repository. I believe passionately in sharing knowledge, but I also firmly respect the university's policies. This document follows [Dean Joyner's advice on sharing projects](https://www.reddit.com/r/OMSCS/comments/zwdwns/comment/j1udv6w/).
 >
 > I would be delighted to discuss the implementation details, architecture, or specific code sections in an interview. Please feel free to reach out to request private access to the repository.
-
-## Additional resources
-
-- [GIOS Course Website](https://omscs.gatech.edu/cs-6200-introduction-operating-systems)
-- [K&R C Programming Language](https://en.wikipedia.org/wiki/The_C_Programming_Language)
-- [Beej's Guide to C Programming](https://beej.us/guide/bgc/)
-- [Beej's Guide to Networking Concepts](https://beej.us/guide/bgnet0/)
-- [Beej's Guide to Network Programming](https://beej.us/guide/bgnet/)
-- [Linux Programming Interface](https://man7.org/tlpi/)
-- [Operating Systems: Three Easy Pieces](https://pages.cs.wisc.edu/~remzi/OSTEP/)
-- https://gist.github.com/nycdavid/748da176af8d4e1330d6dae3c476a925
