More progress on the retro post

--- a/src/content/draft/gios-pr3/index.mdx
+++ b/src/content/draft/gios-pr3/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Proxy & Cache Server'
 description: 'Building a Proxy and Cache Server with IPC and Shared Memory in C: Lessons from a Graduate OS Course'
-date: '2025-01-28'
+date: '2025-06-20'
 status: 'in-progress'
 type: 'project'
 tags: ['GIOS', 'operating-systems', 'c', 'multithreading', 'IPC', 'shared-memory']
@@ -10,8 +10,8 @@ draft: false
 audience: 'All'
 media_subpath: "/ideas/gios-pr3/"
 image:
-  path: "./ipc.png"
-  alt: 'Fig 7 Le Telephone by T du Moncel Paris 1880'
+  path: "./moebius-fly-dawn.png"
+  alt: 'Moebius Fly Night by Jean Giraud'
 ---
 
 
