--- a/src/content/draft/gios-pr4/index.mdx
+++ b/src/content/draft/gios-pr4/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Distributed File System'
 description: 'Building a Distributed File System in C++: Lessons in Consistency and Remote Communication'
-date: '2025-01-28'
+date: '2025-06-20'
 status: 'in-progress'
 type: 'project'
 tags: ['GIOS', 'operating-systems', 'c++', 'multithreading', 'IPC', 'RPC', 'distributed-systems']
@@ -10,7 +10,7 @@ draft: false
 audience: 'All'
 media_subpath: "/ideas/gios-pr4/"
 image:
-  path: "./moebius-by-jean-giraud.jpg"
+  path: "./moebius-fly-night.jpeg"
   alt: 'Moebius by Jean Giraud'
 ---
 
